# x7-testing

./: .gitignore  Makefile  dev-requirements.txt  requirements.txt  setup.cfg
docs/: conf.py
test_inputs/: example.py  example_imported.py  output_example.py  output_example_adds.py  output_example_adds_mod_test.py  output_example_adds_new_import.py  parse_basic.py  parse_empty.py  parse_missing.py  tests.py
tests/x7/testing/: test_basic.py  test_extended.py  test_extended.td  test_support.py
tests/x7/testing/maketests/: test_gen_code.py  test_maketests.py  test_mod_support.py  test_outmap.py  test_parse.py  test_types.py
x7/testing/: extended.py  shell_tools.py  support.py
x7/testing/maketests/: gen_code.py  maketests.py  mod_support.py  outmap.py  parse.py  types.py
