[metadata]
name = x7-testing
author = Glenn Gribble
author_email = dev@gribbelus.com
description = X7 helpers for unittest tests
long_description = file: README.rst
version = attr: x7.testing.__version__
url = https://github.com/gribbg/x7-testing
keywords =
#  cool printing
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
license_files =
    LICENSE

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
    x7-lib

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
tests =
  pytest
  flake8
  mypy

[options.entry_points]
console_scripts =
#  some_program = some_package:__main__:cli
